* Dynamic Presentation: Fix multiple lines having text cut off

--- a/css/dynamic.css
+++ b/css/dynamic.css
@@ -4,8 +4,10 @@
     max-height: none;
     margin: 0;
     border: none;
-    box-shadow: inset 0px -5px white;
+    box-shadow: inset 0px -3px rgba(255, 255, 255, 0.8);
     overflow: hidden;
+    /* Prevent this div from adding any height. */
+    font-size: 0;
 }
 
 .reveal.reveal .slides > section, .reveal.reveal .slides > section > section {
